UI functions, new table of contents

--- a/src/config/_default/params.toml
+++ b/src/config/_default/params.toml
@@ -1,6 +1,7 @@
 authorUrl = "https://www.scottsmitelli.com/"
 cosmoreDownloadUrl = "https://github.com/smitelli/cosmore/archive/refs/heads/main.zip"
 dataTableHeaderFreq = 15
+enableNav = true
 gitCloneUrl = "https://github.com/smitelli/cosmodoc.git"
 gitContentUrl = "https://github.com/smitelli/cosmodoc/tree/main/src/content"
 subtitle = "The semi-complete teardown of Cosmo's Cosmic Adventure"
